docs(cspe): partial work on software and network